--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name":        "GitHub Indexer",
+    "name":        "kukkoro",
     "description": "A chrome extension which index github's README",
     "version":     "0.0.1",
     "permissions": ["tabs", "activeTab"],
