--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,6 @@
       }
     ],
     "background": {
-        "scripts": ["hot-reload.js"]
+        "scripts": ["dev/hot-reload.js", "dev/inject-script.js"]
     }
 }
