--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,8 @@
         "matches": ["https://github.com/*"],
         "js": [
           "vendor/jquery-3.1.1.min.js",
+          "js/ReadmeRenderer.js",
+          "js/CodeRenderer.js",
           "js/content.js"
         ],
         "css": [
